--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:watch": "npx nodemon  --watch src --exec 'ng serve --port 4200 --host 0.0.0.0 --disable-host-check --poll 500'",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
