--- a/.github/workflows/trigger-cypress.yml
+++ b/.github/workflows/trigger-cypress.yml
@@ -15,9 +15,9 @@ jobs:
         run: |
           # Set the required variables
           repo_owner="JessySeo9955" 
-          repo_name="REPOSITORY NAME"  
-          event_type="cypress_automation" 
-          service=${{ github.event.inputs.target_service }}"
+          repo_name="cypress_automation NAME"  
+          event_type="trigger-workflow" 
+          service="${{ github.event.inputs.target_service }}"
           version="${{ github.event.inputs.target_version }}"
 
           curl -L \
