--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,7 +9,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
 
-    "test:output": "ng test --no-watch --browsers=ChromeHeadless --no-progress --reporters=progress && exit 0",
+    "test:output": "ng test --no-watch --no-progress --reporters=progress && exit 0",
     "serve:ssr:front-end": "node dist/front-end/server/server.mjs"
   },
   "private": true,
