--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Frontend Build and test
         run: |
+          CHROME_BIN = ''
           docker build --target unittest -t myapp:dev ./front-end
           docker run --name frontend --rm myapp:dev 
 
