--- a/.github/workflows/trigger-cypress.yml
+++ b/.github/workflows/trigger-cypress.yml
@@ -4,6 +4,16 @@ on:
     workflows: ["Deploy Docker Images to Heroku"]  # This should be the name of your first workflow
     types:
       - completed  # Trigger when the first workflow is completed
+  workflow_dispatch:
+    inputs:
+      target_service:
+        description: 'Service to deploy'
+        required: true
+        default: 'frontend'
+      target_version:
+        description: 'Version to deploy'
+        required: true
+        default: 'v1.0.0'
 
 jobs:
   integrate-test:
