--- a/.github/workflows/heroku-deploy/action.yml
+++ b/.github/workflows/heroku-deploy/action.yml
@@ -1,6 +1,9 @@
 name: "build and push template"
 
 inputs:
+  heroku_secret:
+    description: heroku api key
+    required: true
   container-name:
     description: docker container name
     required: true
@@ -13,7 +16,7 @@ inputs:
 runs:
   using: composite
   env:
-    HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+    HEROKU_API_KEY: ${{ inputs.heroku_secret }}
   steps:
       - uses: actions/checkout@v4
 
