--- a/.github/workflows/deploy-to-heroku.yml
+++ b/.github/workflows/deploy-to-heroku.yml
@@ -18,11 +18,13 @@ jobs:
         with:
           container-name: 'school_nest:latest'
           app-name: 'school-enrollment'
+          heroku_secret: ${{ secrets.HEROKU_API_KEY }}
       - id: frontend
         uses: ./.github/workflows/heroku-deploy
         with:
           container-name: 'school_angular:latest'
           app-name: 'school-enrollment-front'
+          heroku_secret: ${{ secrets.HEROKU_API_KEY }}
 
 
 #      - name: Install Heroku CLI
