--- a/.github/workflows/deploy-to-heroku.yml
+++ b/.github/workflows/deploy-to-heroku.yml
@@ -19,12 +19,14 @@ jobs:
           container-name: 'school_nest:latest'
           app-name: 'school-enrollment'
           heroku_secret: ${{ secrets.HEROKU_API_KEY }}
+          docker_username: ${{ vars.DOCKERHUB_USERNAME }}
       - id: frontend
         uses: ./.github/workflows/heroku-deploy
         with:
           container-name: 'school_angular:latest'
           app-name: 'school-enrollment-front'
           heroku_secret: ${{ secrets.HEROKU_API_KEY }}
+          docker_username: ${{ vars.DOCKERHUB_USERNAME }}
 
 
 #      - name: Install Heroku CLI
