--- a/.github/workflows/deploy-to-heroku.yml
+++ b/.github/workflows/deploy-to-heroku.yml
@@ -10,8 +10,7 @@ jobs:
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    env:
-      HEROKU_API_KEY: ${{ inputs.heroku_secret }}
+
     steps:
       - uses: actions/checkout@v4
       - id: backend
@@ -19,12 +18,14 @@ jobs:
         with:
           container-name: 'school_nest:latest'
           app-name: 'school-enrollment'
+          heroku_secret: ${{ secrets.HEROKU_API_KEY }}
           docker_username: ${{ vars.DOCKERHUB_USERNAME }}
       - id: frontend
         uses: ./.github/workflows/heroku-deploy
         with:
           container-name: 'school_angular:latest'
           app-name: 'school-enrollment-front'
+          heroku_secret: ${{ secrets.HEROKU_API_KEY }}
           docker_username: ${{ vars.DOCKERHUB_USERNAME }}
 
 
