--- a/.github/workflows/deploy-to-heroku.yml
+++ b/.github/workflows/deploy-to-heroku.yml
@@ -1,10 +1,10 @@
 name: Deploy Docker Images to Heroku
 
-on:
-  workflow_run:
-    workflows: ["Docker Build and Push"]  # This should be the name of your first workflow
-    types:
-      - completed  # Trigger when the first workflow is completed
+on: [push]
+#  workflow_run:
+#    workflows: ["Docker Build and Push"]  # This should be the name of your first workflow
+#    types:
+#      - completed  # Trigger when the first workflow is completed
 
 jobs:
   deploy:
