--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,12 +1,11 @@
 name: Unit Test
 
-on: [push]
-#workflow_dispatch:
-#  push:
-#    branches: ["feature/*"]
-#    paths:
-#      - 'back-end/**'
-#      - 'front-end/**'
+workflow_dispatch:
+  push:
+    branches: ["main"]
+    paths:
+      - 'back-end/**'
+      - 'front-end/**'
 
 permissions:
   checks: write
