--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -3,7 +3,7 @@ name: Unit Test
 on:
   push:
     branches:
-      - main
+      - develop
     paths:
       - 'back-end/**'
       - 'front-end/**'
